# libtee

./: .gitignore  Android.mk  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  libtee.qbs  project.config  tee.qbs
autom4te.cache/: output.1  traces.0  traces.1  traces.2
include/: com_protocol.h  socket_help.h  tee_client_api.h  tee_emu_client_api.h  tee_logging.h
src/: Makemodule.am  com_protocol.c  tee_client_api.c  tee_client_api_emu_ipc.c  tee_client_ipc_api.c  tee_client_mem_api.c
src/open_emu_ipc/: tee_client_api_emu_ipc.c
